CD: add build & push Docker step

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,4 +15,11 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      # Les steps login et build/push pour Marc et qui veut
+      - name: build and push
+        id: push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/ci-cd-trivy:latest
